@@ -2,14 +2,13 @@ package com.mycompany.myapp.security;
 
 import com.mycompany.myapp.config.Constants;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.springframework.security.authentication.AnonymousAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -40,14 +39,15 @@ public final class SecurityUtils {
     }
 
     private static String extractPrincipal(Authentication authentication) {
-        if (authentication == null) {
+        // AnonymousAuthenticationToken has a String principal that would fall through below
+        if (authentication == null || authentication instanceof AnonymousAuthenticationToken) {
             return null;
         } else if (authentication.getPrincipal() instanceof UserDetails springSecurityUser) {
             return springSecurityUser.getUsername();
-        } else if (authentication instanceof JwtAuthenticationToken) {
-            return (String) ((JwtAuthenticationToken) authentication).getToken().getClaims().get("preferred_username");
-        } else if (authentication.getPrincipal() instanceof DefaultOidcUser) {
-            Map<String, Object> attributes = ((DefaultOidcUser) authentication.getPrincipal()).getAttributes();
+        } else if (authentication instanceof JwtAuthenticationToken jwtToken) {
+            return (String) jwtToken.getToken().getClaims().get("preferred_username");
+        } else if (authentication.getPrincipal() instanceof DefaultOidcUser oidcUser) {
+            Map<String, Object> attributes = oidcUser.getAttributes();
             if (attributes.containsKey("preferred_username")) {
                 return (String) attributes.get("preferred_username");
             }
@@ -75,9 +75,7 @@ public final class SecurityUtils {
      */
     public static boolean hasCurrentUserAnyOfAuthorities(String... authorities) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        return (
-            authentication != null && getAuthorities(authentication).anyMatch(authority -> Arrays.asList(authorities).contains(authority))
-        );
+        return authentication != null && getAuthorities(authentication).anyMatch(authority -> List.of(authorities).contains(authority));
     }
 
     /**
@@ -102,8 +100,8 @@ public final class SecurityUtils {
 
     private static Stream<String> getAuthorities(Authentication authentication) {
         Collection<? extends GrantedAuthority> authorities =
-            authentication instanceof JwtAuthenticationToken
-                ? extractAuthorityFromClaims(((JwtAuthenticationToken) authentication).getToken().getClaims())
+            authentication instanceof JwtAuthenticationToken jwtToken
+                ? extractAuthorityFromClaims(jwtToken.getToken().getClaims())
                 : authentication.getAuthorities();
         return authorities.stream().map(GrantedAuthority::getAuthority);
     }
@@ -124,8 +122,8 @@ public final class SecurityUtils {
         return roles
             .stream()
             .filter(role -> role.startsWith("ROLE_"))
-            .map(SimpleGrantedAuthority::new)
-            .collect(Collectors.toList());
+            .<GrantedAuthority>map(SimpleGrantedAuthority::new)
+            .toList();
     }
 
     public static Map<String, Object> extractDetailsFromTokenAttributes(Map<String, Object> attributes) {
@@ -146,7 +144,7 @@ public final class SecurityUtils {
         } else {
             String sub = String.valueOf(attributes.get(StandardClaimNames.SUB));
             String preferredUsername = (String) attributes.get(StandardClaimNames.PREFERRED_USERNAME);
-            if (sub.contains("|") && (preferredUsername != null && preferredUsername.contains("@"))) {
+            if (sub.contains("|") && preferredUsername != null && preferredUsername.contains("@")) {
                 // special handling for Auth0
                 details.put("email", preferredUsername);
             } else {
